Add v0.99 need add link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <p>Web development began to study because there was nothing to do. This turned out to be a fascinating occupation, so I decided to continue my path in this direction. </p>
           <p>You can find my CV below.</p>
           <div class="col-lg-8 col-lg-offset-2 about-item text-center">
-            <a href="cv/cv.Babiychuk Evgeniy.pdf">
+            <a href="./CV/MykolaMorozov.pdf">
               <div class="btn btn-outline ">CV</div>
             </a>
           </div>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="https://github.com/babiychuk/landing-page-creator/tree/master/src" target="_blank">
+                        <a href="https://github.com/Sporium/JSDrumKit" target="_blank">
                           <div class="btn btn-outline ">код</div>
                         </a>
                       </div>
@@ -215,7 +215,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="https://github.com/babiychuk/mini-task-manager/tree/master/src" target="_blank">
+                        <a href="https://github.com/Sporium/Checkboxes" target="_blank">
                           <div class="btn btn-outline ">код</div>
                         </a>
                       </div>
@@ -240,7 +240,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="https://github.com/babiychuk/photo-gallery/tree/master/src" target="_blank">
+                        <a href="https://github.com/Sporium/Canvas" target="_blank">
                           <div class="btn btn-outline ">код</div>
                         </a>
                       </div>
@@ -265,7 +265,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="https://github.com/babiychuk/task-manager-with-calendar/tree/master/src" target="_blank">
+                        <a href="https://github.com/Sporium/Ajax_Type_Ahead_with_fetch" target="_blank">
                           <div class="btn btn-outline ">код</div>
                         </a>
                       </div>
@@ -290,7 +290,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="https://github.com/babiychuk/some-work-with-api" target="_blank">
+                        <a href="https://github.com/Sporium/JS30-3Flexbox-JavaScript-Image-Gallery-" target="_blank">
                           <div class="btn btn-outline ">код</div>
                         </a>
                       </div>
@@ -344,7 +344,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="https://github.com/babiychuk/babiychuk.github.io/tree/master/sites/promoPredator" target="_blank">
+                        <a href="https://github.com/Sporium/TicTacToe" target="_blank">
                           <div class="btn btn-outline ">код</div>
                         </a>
                       </div>
@@ -390,7 +390,7 @@
                   <div class="portfolio_work_dec">
                     <h4>Recepi React APP</h4>
                     <p>React app</p>
-                    <a href="http://www.nerc.gov.ua/?id=24042" target="_blank">
+                    <a href="#" target="_blank">
                       <div class="btn btn-outline ">посмотреть</div>
                     </a>
                   </div>
@@ -414,7 +414,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="https://github.com/babiychuk/tv1k.github.io" target="_blank">
+                        <a href="#" target="_blank">
                           <div class="btn btn-outline ">код</div>
                         </a>
                       </div>
