--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
                     <p>CSS Variable</p>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="sites/energyPoints/eneggypoints.html" target="_blank">
+                        <a href="./Projects/CSS_Variable-master/index.html" target="_blank">
                           <div class="btn btn-outline ">посмотреть</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="./Projects/CSS_Variable-master/index.html" target="_blank">
+                        <a href="https://github.com/Sporium/JS30_CSS_Variable" target="_blank">
                           <div class="btn btn-outline ">код</div>
                         </a>
                       </div>
@@ -354,34 +354,65 @@
                 <img src="img/TicTacToe.JPG" class="img-responsive img_prev" alt="workItem">
               </div>
             </div>
+
+
+
             <div class="col-md-4 col-sm-6 p2">
               <div class="portfolio_work_block">
                 <div class="image_wrap">
                   <div class="portfolio_work_dec">
                     <h4>Simon Says game</h4>
                     <p>Simon says hire me</p>
-                    <a href="./Projects/Simon Game/Index.html" target="_blank">
-                      <div class="btn btn-outline ">посмотреть</div>
-                    </a>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <a href="./Projects/Simon Game/Index.html" target="_blank">
+                          <div class="btn btn-outline ">посмотреть</div>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <a href="https://github.com/Sporium/Simon-Game" target="_blank">
+                          <div class="btn btn-outline ">код</div>
+                        </a>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <img src="img/Simon.JPG" class="img-responsive img_prev" alt="workItem">
               </div>
             </div>
+
+
+
             <div class="col-md-4 col-sm-6 p2">
               <div class="portfolio_work_block">
                 <div class="image_wrap">
                   <div class="portfolio_work_dec">
                     <h4>Pomodoro clock</h4>
                     <p>Work smart not hard</p>
-                    <a href="./Projects/PomodoroClock/Index.html" target="_blank">
-                      <div class="btn btn-outline ">посмотреть</div>
-                    </a>
+                    <div class="row">
+                      <div class="col-md-12">
+                      <a href="./Projects/PomodoroClock/Index.html" target="_blank">
+                          <div class="btn btn-outline ">посмотреть</div>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <a href="https://github.com/Sporium/PomadoroClock" target="_blank">
+                          <div class="btn btn-outline ">код</div>
+                        </a>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <img src="img/pomodoro.JPG" class="img-responsive img_prev img_prev" alt="workItem">
+                <img src="img/pomodoro.JPG" class="img-responsive img_prev" alt="workItem">
               </div>
             </div>
+
+
+
 
             <div class="col-md-4 col-sm-6 p2">
               <div class="portfolio_work_block">
@@ -390,8 +421,8 @@
                   <div class="portfolio_work_dec">
                     <h4>Recepi React APP</h4>
                     <p>React app</p>
-                    <a href="#" target="_blank">
-                      <div class="btn btn-outline ">посмотреть</div>
+                    <a href="https://github.com/Sporium/ReactRecepieApp" target="_blank">
+                      <div class="btn btn-outline ">код</div>
                     </a>
                   </div>
                 </div>
@@ -414,7 +445,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="#" target="_blank">
+                        <a href="https://github.com/Sporium/JS30_Clock" target="_blank">
                           <div class="btn btn-outline ">код</div>
                         </a>
                       </div>
@@ -465,6 +496,11 @@
                 <a href="https://codepen.io/Sporium" target="_blank">
                   <button class="soc_btn_white">
                 <i class="fab fa-codepen"></i>
+                  </button>
+                </a>
+                <a href="mailto:Bugonort1@gmail.com" target="_blank">
+                  <button class="soc_btn_white">
+                <i class="far fa-envelope"></i>
                   </button>
                 </a>
                 <a href="https://www.codewars.com/users/Sporium" target="_blank">
