--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 
   <meta charset="utf-8" />
-
+  <meta name="Description" content="FrontEnd developer portfolio">
   <title>Mykola Morozov | Developer Scientist Engineer</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8">
@@ -131,49 +131,49 @@
           <div class="row">
             <div class="col-md-3 col-sm-3 ">
               <div class="skills_block">
-                <img src="img/reaccionar.svg" height="90px">
+                <img src="img/reaccionar.svg" height="90px" alt="ReactJS">
                 <h3>React </h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-3 ">
               <div class="skills_block">
-                <img src="img/git.svg" height="90px">
+                <img src="img/git.svg" height="90px" alt="Git">
                 <h3>Git </h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-3 ">
               <div class="skills_block">
-                <img src="img/js.svg" height="90px">
+                <img src="img/js.svg" height="90px" alt="JS">
                 <h3>JavaSctipt </h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-3 ">
               <div class="skills_block">
-                <img src="img/HTML.svg" height="90px">
+                <img src="img/HTML.svg" height="90px" alt="HTML">
                 <h3>HTML </h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-3">
               <div class="skills_block">
-                <img src="img/CSS.svg" height="90px">
+                <img src="img/CSS.svg" height="90px" alt="CSS">
                 <h3>CSS</h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-3 ">
               <div class="skills_block">
-                <img src="img/bootstrap.svg" height="90px">
+                <img src="img/bootstrap.svg" height="90px" alt="BOOTSTRAP">
                 <h3>BOOTSTRAP </h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-3">
               <div class="skills_block">
-                <img src="img/jquery.svg" height="90px">
+                <img src="img/jquery.svg" height="90px" alt="jQuery">
                 <h3>JQuery</h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-3">
               <div class="skills_block">
-                <img src="img/NodeJs.svg" height="90px">
+                <img src="img/NodeJs.svg" height="90px" alt="NodeJS">
                 <h3>NodeJS</h3>
               </div>
             </div>
