--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@
                     <div class="row">
                       <div class="col-md-12">
                         <a href="./Projects/JSDrumKit/DrumKit.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/JSDrumKit" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
@@ -240,14 +240,14 @@
                     <div class="row">
                       <div class="col-md-12">
                         <a href="./Projects/Checkboxes/Index.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/Checkboxes" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
@@ -265,14 +265,14 @@
                     <div class="row">
                       <div class="col-md-12">
                         <a href="./Projects/Canvas/Index.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/Canvas" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
@@ -290,14 +290,14 @@
                     <div class="row">
                       <div class="col-md-12">
                         <a href="./Projects/Ajax_Type_Ahead_with_fetch/Index.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/Ajax_Type_Ahead_with_fetch" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
@@ -315,14 +315,14 @@
                     <div class="row">
                       <div class="col-md-12">
                         <a href="./Projects/flexbox_gallery/index.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/JS30-3Flexbox-JavaScript-Image-Gallery-" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
@@ -344,14 +344,14 @@
                     <div class="row">
                       <div class="col-md-12">
                         <a href="./Projects/CSS_Variable-master/index.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/JS30_CSS_Variable" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
@@ -369,14 +369,14 @@
                     <div class="row">
                       <div class="col-md-12">
                         <a href="./Projects/TicTacToe/Index.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/TicTacToe" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
@@ -397,14 +397,14 @@
                     <div class="row">
                       <div class="col-md-12">
                         <a href="./Projects/Simon Game/Index.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/Simon-Game" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
@@ -425,14 +425,14 @@
                     <div class="row">
                       <div class="col-md-12">
                       <a href="./Projects/PomodoroClock/Index.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/PomadoroClock" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
@@ -453,7 +453,7 @@
                     <h4>Recepi React APP</h4>
                     <p>React app</p>
                     <a href="https://github.com/Sporium/ReactRecepieApp" target="_blank">
-                      <div class="btn btn-outline ">код</div>
+                      <div class="btn btn-outline ">Code</div>
                     </a>
                   </div>
                 </div>
@@ -470,14 +470,14 @@
                     <div class="row">
                       <div class="col-md-12">
                         <a href="./Projects/Clock-master/JS30_Clock.html" target="_blank">
-                          <div class="btn btn-outline ">посмотреть</div>
+                          <div class="btn btn-outline ">View</div>
                         </a>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-12">
                         <a href="https://github.com/Sporium/JS30_Clock" target="_blank">
-                          <div class="btn btn-outline ">код</div>
+                          <div class="btn btn-outline ">Code</div>
                         </a>
                       </div>
                     </div>
