--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 
+
   <meta charset="utf-8" />
   <meta name="Description" content="FrontEnd developer portfolio">
   <title>Mykola Morozov | Developer Scientist Engineer</title>
@@ -18,6 +19,7 @@
 <script src="https://kit.fontawesome.com/443ae5983f.js" crossorigin="anonymous"></script>
 
 <!-- Yandex.Metrika counter -->
+<script type="text/javascript" src="https://www.l2.io/ip.js?var=userip"></script>
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
@@ -28,9 +30,27 @@
         trackLinks:true,
         accurateTrackBounce:true,
         webvisor:true,
+        params:{'ip': userip},
         trackHash:true
+
    });
+  // console.log(userip)
 </script>
+PHP
+<script type="application/javascript">
+function getIP(json) {
+dataLayer.push({"event":"ipEvent","ipAddress" : json.ip});
+}
+</script>
+<script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
+
+<script type="application/javascript">
+function getIP(json) {
+dataLayer.push({"event":"ipEvent","ipAddress" : json.ip});
+}
+</script>
+<script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
+
 <noscript><div><img src="https://mc.yandex.ru/watch/57419335" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
@@ -50,6 +70,7 @@
 </head>
 
 <body>
+
 
   <div>
 
