--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 </head>
 
 <body>
-
+<div id="progressbar"></div>
+<div id="scrollPath"></div>
 
   <div>
 
@@ -574,6 +575,14 @@
 
   <script src="libs/bootstrap/js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
+  <script type='text/javascript'>
+  var progress = document.getElementById('progressbar');
+var totalHeight = document.body.scrollHeight - window.innerHeight;
+window.onscroll = function(){
+  var progressHeight = (window.pageYOffset / totalHeight) * 100;
+  progress.style.height = progressHeight + "%";
+}
+  </script>
 
 </body>
 
