--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         </div>
       </nav>
     </header>
+    <body>
+      
+    
   </div>
   <div class="first_block">
     <div class="title_block">
