--- a/index.html
+++ b/index.html
@@ -179,6 +179,13 @@
    
       <section class="hero-section">
         <div class="card-grid">
+          <a class="card" href="/Projects/ThreeJS/Index.html">
+            <div class="card__background" style="background-image: url(img/Hornet.JPG)"></div>
+            <div class="card__content">
+              <p class="card__category">ThreeJS</p>
+              <h3 class="card__heading">Hornet 3D model</h3>
+            </div>
+          </a>
           <a class="card" href="/Projects/JSDrumKit/DrumKit.html">
             <div class="card__background" style="background-image: url(img/DrumKit.JPG)"></div>
             <div class="card__content">
