--- a/index.html
+++ b/index.html
@@ -178,15 +178,16 @@
 
    
       <section class="hero-section">
+       
+         
         <div class="card-grid">
           <a class="card" href="https://codesandbox.io/s/reactvideohub-78mow">
-            <div class="card__background" style="background-image: url(img/ReactVideoHub.JPG)"></div>
+            <div class="card__background" style="background-image: url(img/ReactVideoHub.JPG); background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
               <p class="card__category">ReactJS</p>
               <h3 class="card__heading">React Video Hub</h3>
             </div>
           </a>
-        <div class="card-grid">
           <a class="card" href="/Projects/ThreeJS/Index.html">
             <div class="card__background" style="background-image: url(img/Hornet.JPG)"></div>
             <div class="card__content">
