--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <!-- <a href="./CV/MykolaMorozov.pdf">
             <div class="btn btn-outline CV">CV</div>
           </a> -->
-          <a id="CV" href="./CV/MykolaMorozov.pdf">
+          <a id="CV" href="./CV/MorozovMykola.pdf">
             CV
           </a>
         </div>
