--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <div class="row">
             <div class="col-md-4 col-md-offset-4">
               <div class="copy_txt">
-                Copyright © Portfolio | 2020
+                <!-- Copyright © Portfolio | 2020 -->
               </div>
             </div>
           </div>
