--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
       </div>
       <div class="row">
         <div class="col-md-4 colText">
-          I am looking for opportunities to improve my skills and become useful. An engineer and scientist with a master's degree in electronics, which gives strong knowledge on the Internet of things, algorithms, logic, research and the search for
-          new information, as well as ultrafast training.
+          I am an engineer and scientist with a master's degree in electronics looking for opportunities to improve my skills. My knowledge of the Internet, algorithms, logic, and research have allowed me to become a quick learner.  
         </div>
         <div class="col-md-4 colText">
-          <p>Web development began to study because there was nothing to do. This turned out to be a fascinating occupation, so I decided to continue my path in this direction. </p>
+          <p>The study of web development began as a way to productively use my extra time. This turned out to be a fascinating occupation, so I decided to continue my path in this direction. </p>
           <p>You can find my CV below.</p>
          
 
@@ -182,84 +181,84 @@
          
         <div class="card-grid">
           <a class="card" href="https://codesandbox.io/s/reactvideohub-78mow">
-            <div class="card__background" style="background-image: url(img/ReactVideoHub.JPG); background-repeat: no-repeat;  background-size: cover;"></div>
+            <div class="card__background" style="background-image: url(img/ReactVideoHub.webp); background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
               <p class="card__category">ReactJS</p>
               <h3 class="card__heading">React Video Hub</h3>
             </div>
           </a>
           <a class="card" href="/Projects/ThreeJS/Index.html">
-            <div class="card__background" style="background-image: url(img/Hornet.JPG)"></div>
+            <div class="card__background" style="background-image: url(img/Hornet.webp)"></div>
             <div class="card__content">
               <p class="card__category">ThreeJS</p>
               <h3 class="card__heading">ThreeJS 3D model</h3>
             </div>
           </a>
           <a class="card" href="/Projects/JSDrumKit/DrumKit.html">
-            <div class="card__background" style="background-image: url(img/DrumKit.JPG)"></div>
+            <div class="card__background" style="background-image: url(img/DrumKit.webp)"></div>
             <div class="card__content">
               <p class="card__category">Vanila JS & CSS</p>
               <h3 class="card__heading">Drum machine</h3>
             </div>
           </a>
           <a class="card" href="/Projects/Checkboxes/Index.html">
-            <div class="card__background" style="background-image: url(img/checkbox.JPG)"></div>
+            <div class="card__background" style="background-image: url(img/checkbox.webp)"></div>
             <div class="card__content">
               <p class="card__category">Vanila JS & CSS</p>
               <h3 class="card__heading">Hold Shift Checkboxes</h3>
             </div>
           </a>
           <a class="card" href="/Projects/Canvas/Index.html">
-            <div class="card__background" style="background-image: url(https://raw.githubusercontent.com/Sporium/Sporium.github.io/master/img/canvas.JPG)"></div>
+            <div class="card__background" style="background-image: url(img/canvas.webp"></div>
             <div class="card__content">
               <p class="card__category">Canvas</p>
               <h3 class="card__heading">Fun with canvas</h3>
             </div>
           </a>
           <a class="card" href="/Projects/Ajax_Type_Ahead_with_fetch/Index.html">
-            <div class="card__background" style="background-image: url(img/Ajax.JPG)"></div>
+            <div class="card__background" style="background-image: url(img/Ajax.webp)"></div>
             <div class="card__content">
               <p class="card__category">Ajax</p>
               <h3 class="card__heading">Ajax type ahead with fetch</h3>
             </div>
           </a>
           <a class="card" href="/Projects/flexbox_gallery/index.html">
-            <div class="card__background" style="background-image: url( img/FlexBox.JPG);  background-repeat: no-repeat;  background-size: cover;"></div>
+            <div class="card__background" style="background-image: url( img/FlexBox.webp);  background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
               <p class="card__category">FlexBox</p>
               <h3 class="card__heading">Flexbox gallery</h3>
             </div>
           </a>
           <a class="card" href="/Projects/CSS_Variable-master/index.html">
-            <div class="card__background" style="background-image: url(img/CssVariable.JPG);  background-repeat: no-repeat;  background-size: cover;"></div>
+            <div class="card__background" style="background-image: url(img/CssVariable.webp);  background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
               <p class="card__category">CSS Variable</p>
               <h3 class="card__heading">CSS Variable</h3>
             </div>
           </a>
           <a class="card" href="/Projects/TicTacToe/Index.html">
-            <div class="card__background" style="background-image: url( img/TicTacToe.JPG);  background-repeat: no-repeat;  background-size: cover;"></div>
+            <div class="card__background" style="background-image: url( img/TicTacToe.webp);  background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
               <p class="card__category">JS algorithms</p>
               <h3 class="card__heading">TicTacToe</h3>
             </div>
           </a>
           <a class="card" href="/Projects/Simon Game/Index.html">
-            <div class="card__background" style="background-image: url(img/Simon.JPG);  background-repeat: no-repeat;  background-size: cover;"></div>
+            <div class="card__background" style="background-image: url(img/Simon.webp);  background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
               <p class="card__category">Vanila JS</p>
               <h3 class="card__heading">Simon Says game</h3>
             </div>
           </a>
           <a class="card" href="https://codesandbox.io/s/recipe-app-reactjs-8dxts">
-            <div class="card__background" style="background-image: url( img/recepie.JPG);  background-repeat: no-repeat;  background-size: cover;"></div>
+            <div class="card__background" style="background-image: url( img/recepie.webp);  background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
               <p class="card__category">ReactJS</p>
               <h3 class="card__heading">Recepi React APP</h3>
             </div>
           </a>
           <a class="card" href="/Projects/Clock-master/JS30_Clock.html">
-            <div class="card__background" style="background-image: url(img/Clock.JPG);  background-repeat: no-repeat;  background-size: cover;"></div>
+            <div class="card__background" style="background-image: url(img/Clock.webp);  background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
               <p class="card__category">CSS</p>
               <h3 class="card__heading">Analog Clock</h3>
