--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta charset="utf-8" />
 
   <title>Mykola Morozov | Developer Scientist Engineer</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
  
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8">
   
-  <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/media.css" />
+  <!-- <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/media.css" /> -->
   <link rel="stylesheet" href="styles/main.css" />
 
 </head>
