--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
           </a>
           <a class="card" href="/Projects/Canvas/Index.html">
-            <div class="card__background" style="background-image: url(img/canvas.webp"></div>
+            <div class="card__background" style="background-image: url(img/canvas.webp)"></div>
             <div class="card__content">
               <p class="card__category">Canvas</p>
               <h3 class="card__heading">Fun with canvas</h3>
