--- a/index.html
+++ b/index.html
@@ -216,6 +216,13 @@
        
          
         <div class="card-grid">
+          <a class="card" href="https://5ec41a1ff2527c0256558d34--wizardly-golick-61a092.netlify.app/">
+            <div class="card__background" style="background-image: url(img/reactChat.webp); background-repeat: no-repeat;  background-size: cover;"></div>
+            <div class="card__content">
+              <p class="card__category">ReactJS socket.io</p>
+              <h3 class="card__heading">React Chat on socket.io</h3>
+            </div>
+          </a>
           <a class="card" href="https://codesandbox.io/s/reactvideohub-78mow">
             <div class="card__background" style="background-image: url(img/ReactVideoHub.webp); background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
@@ -244,13 +251,13 @@
               <h3 class="card__heading">Hold Shift Checkboxes</h3>
             </div>
           </a>
-          <a class="card" href="/Projects/Canvas/Index.html">
+          <!-- <a class="card" href="/Projects/Canvas/Index.html">
             <div class="card__background" style="background-image: url(img/canvas.webp)"></div>
             <div class="card__content">
               <p class="card__category">Canvas</p>
               <h3 class="card__heading">Fun with canvas</h3>
             </div>
-          </a>
+          </a> -->
           <a class="card" href="/Projects/Ajax_Type_Ahead_with_fetch/Index.html">
             <div class="card__background" style="background-image: url(img/Ajax.webp)"></div>
             <div class="card__content">
