--- a/index.html
+++ b/index.html
@@ -237,6 +237,13 @@
               <h3 class="card__heading">ThreeJS 3D model</h3>
             </div>
           </a>
+          <a class="card" href="/Projects/face_recognition_on_JS/Index.html">
+            <div class="card__background" style="background-image: url(img/face.webp)"></div>
+            <div class="card__content">
+              <p class="card__category">TensorFlow</p>
+              <h3 class="card__heading">Face recognition</h3>
+            </div>
+          </a>
           <a class="card" href="/Projects/JSDrumKit/DrumKit.html">
             <div class="card__background" style="background-image: url(img/DrumKit.webp)"></div>
             <div class="card__content">
@@ -272,12 +279,12 @@
               <h3 class="card__heading">Flexbox gallery</h3>
             </div>
           </a>
-          <a class="card" href="/Projects/CSS_Variable-master/index.html">
+          <!-- <a class="card" href="/Projects/CSS_Variable-master/index.html">
             <div class="card__background" style="background-image: url(img/CssVariable.webp);  background-repeat: no-repeat;  background-size: cover;"></div>
             <div class="card__content">
               <p class="card__category">CSS Variable</p>
               <h3 class="card__heading">CSS Variable</h3>
-            </div>
+            </div> -->
           </a>
           <a class="card" href="/Projects/TicTacToe/Index.html">
             <div class="card__background" style="background-image: url( img/TicTacToe.webp);  background-repeat: no-repeat;  background-size: cover;"></div>
