camera permission + fix position

--- a/Projects/face_recognition_on_JS/Index.html
+++ b/Projects/face_recognition_on_JS/Index.html
@@ -4,6 +4,19 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Face recognition</title>
+		<script>
+			var successCallback = function (error) {
+				// user allowed access to camera
+			};
+			var errorCallback = function (error) {
+				if (error.name == 'NotAllowedError') {
+					// user denied access to camera
+				}
+			};
+			navigator.mediaDevices
+				.getUserMedia(constraints)
+				.then(successCallback, errorCallback);
+		</script>
 		<script defer src="face-api.min.js"></script>
 		<script defer src="script.js"></script>
 		<style>
